<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Profile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="12dp"
            android:text="@string/Lumbini"
            android:textColor="@color/blue"
            android:textSize="45dp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />



        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:background="@color/blue_200"
            android:text="Lumbini"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />



        <ImageView
            android:id="@+id/iv_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_above="@+id/btn_right"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="30dp"
            android:scaleType="center"
            android:src="@drawable/lum" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Lumbini1"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck"
            />

        <ImageView
            android:id="@+id/iv_display1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_right"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="30dp"
            android:scaleType="center"
            android:src="@drawable/lum1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Lumbini2"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck"
            />
        <ImageView
            android:id="@+id/iv_display3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_right"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="30dp"
            android:scaleType="center"
            android:src="@drawable/lum3" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lum1"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck"
            />



    </LinearLayout>


</ScrollView>